Changes for 1.1alpha8:

 - better report3.php (Alexei)
 - better alarms.php (Alexei)
 - new item type: active check (Alexei)
 - new mandatory parameter for zabbix_agentd.conf - Hostname (Alexei)
 - started development of active agent checks (Alexei)
 - hard-linked templates works when deleting graph element (Alexei)
 - hard-linked templates works when adding graph element (Alexei)
 - support of memory[free] under OS/X (Alexei)
 - support of memory[total] under OS/X (Alexei)
 - fixed compilation of agent under OS/X (Alexei)
 - fixed memory[total] for HP-UX when >4GB of memory (Alexei)

Changes for 1.1alpha7:

 - fixed memory[free] for HP-UX when >4GB of memory (Alexei)
 - hard-linked templates works when deleting an action (Alexei)
 - hard-linked templates works when adding an action (Alexei)
 - added frontends/php/include/hosts.inc.php (Alexei)
 - added frontends/php/include/maps.inc.php (Alexei)
 - added frontends/php/include/services.inc.php (Alexei)
 - added frontends/php/include/actions.inc.php (Alexei)
 - hard-linked templates works when deleting a trigger (Alexei)
 - hard-linked templates works when adding a trigger (Alexei)
 - no warning about uninitialised function_str (Alexei)
 - fixed simple checks (Alexei)
 - fixed startup of housekeeper (Alexei)
 - added frontends/php/include/triggers.inc.php (Alexei)
 - added frontends/php/include/graphs.inc.php (Alexei)
 - added frontends/php/include/audit.inc.php (Alexei)
 - added frontends/php/include/users.inc.php (Alexei)
 - added frontends/php/include/screens.inc.php (Alexei)
 - added frontends/php/include/items.inc.php (Alexei)
 - Overview and Details mode for screen Queue (Alexei)

Changes for 1.1alpha6:

 - show both hostname and lable in ALT for map icons (Alexei)
 - added propagation of template item change to related hosts (Alexei)
 - modified data.sql to exclude zabbix_suckerd and zabbix_agentd (Alexei)
 - fixed SQL warning when updating actions (Alexei)