@@ -26,6 +26,10 @@ Hostname=localhost
 
 StartAgents=5
 
+# How often refresh list of active checks. 2 minutes by default.
+
+#RefreshActiveChecks=120
+
 # Specifies debug level
 # 0 - debug is not created
 # 1 - critical information
