@@ -76,6 +76,7 @@ int	CONFIG_NOTIMEWAIT		= 0;
 int	CONFIG_TIMEOUT			= AGENT_TIMEOUT;
 int	CONFIG_LISTEN_PORT		= 10050;
 int	CONFIG_SERVER_PORT		= 10051;
+int	CONFIG_REFRESH_ACTIVE_CHECKS	= 120;
 char	*CONFIG_LISTEN_IP		= NULL;
 int	CONFIG_LOG_LEVEL		= LOG_LEVEL_WARNING;
 
@@ -242,6 +243,7 @@ void    init_config(void)
 		{"ListenIP",&CONFIG_LISTEN_IP,0,TYPE_STRING,PARM_OPT,0,0},
 		{"DebugLevel",&CONFIG_LOG_LEVEL,0,TYPE_INT,PARM_OPT,0,4},
 		{"StartAgents",&CONFIG_AGENTD_FORKS,0,TYPE_INT,PARM_OPT,1,16},
+		{"RefreshActiveChecks",&CONFIG_REFRESH_ACTIVE_CHECKS,0,TYPE_INT,PARM_OPT,60,3600},
 		{"UserParameter",0,&add_parameter,0,0,0,0},
 		{0}
 	};
